apps/base/2048/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: game-2048
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Egress
